# pikuma-3d

./: .gitignore  CMakeLists.txt
include/pikuma/: config.c
src/: array.h  camera.c  camera.h  clipping.c  clipping.h  config.c  config.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
